<resources>
    <string name="app_name">Saviri</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="home">Home</string>
    <string name="not_a_member_click_here_to_register">Not a member click here to register</string>
    <string name="add_shopping_list">add shopping list</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="item_price">Item Price</string>
    <string name="item_name">Item Name</string>
    <string name="input_exchange_rate">input exchange rate</string>
    <string name="choose_currency">Choose currency</string>
    <string name="shoping_list_name">Shoping List Name</string>
</resources>